Refactor API endpoints and enhance error handling in server.js and clip-matcher.py
- Updated fetch calls in viewer.html to use the latest verification and scan status endpoints without timestamps.
- Simplified the latest match retrieval logic in server.js to always fetch from the database.
- Improved error handling in clip-matcher.py by changing the model to a larger variant and refining error messages for better clarity.

--- a/public/viewer.html
+++ b/public/viewer.html
@@ -241,7 +241,7 @@
         }
         
         function fetchLatestVerification() {
-            fetch('/api/latest-match?t=' + Date.now())
+            fetch('/api/latest-verification')
                 .then(response => response.json())
                 .then(data => {
                     displayVerificationImage(data);
@@ -252,7 +252,7 @@
         }
         
         function fetchScanStatus() {
-            fetch('/api/scan/status?t=' + Date.now())
+            fetch('/api/scan/status')
                 .then(response => response.json())
                 .then(data => {
                     updateScanStatus(data);
